--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <title>11</title>
 </head>
 <body>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
-    <h1>你被骗了，蠢驴</h1>
+    <h1>你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+        你被骗了，蠢驴<br>
+    </h1>
 </body>
 </html>
